<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ApplicationName">Traceper</string>
    <string name="hello">Hello World, startApp</string>
    <string name="friend_list">Friend List</string>
    
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="messaging">Messaging</string>
    <string name="local_service_started">App service started</string>
    <string name="local_service_stopped">App service stopped</string>
	<string name="local_service_connected">local_service_connected</string>
	<string name="OK">OK</string>
	<string name="not_connected_to_service">Not connected to the service and 
	this is not supposed to happend so please inform this situation to 
	ahmetmermerkaya@hotmail.com</string>	
	<string name="fill_both_username_and_password">Please fill both username and password</string>
	<string name="make_sure_username_and_password_correct">Please make sure that
	your username and password correct</string>
	<string name="user_offline">This user is offline</string>
	<string name="register">Register</string>
	<string name="exit_application">Exit</string>	
	<string name="password_again">Password(again):</string>
	<string name="signup_fill_all_fields">Please fill all fields</string>
	<string name="signup_type_same_password_in_password_fields">Type same password in password fields</string>
	<string name="signup_failed">Sign up failed because of unknown reason</string>
	<string name="signup_email_crashed">Your email have been already used</string>
	<string name="signup_successfull">Your data is recorded successfully, check your email to activate your account</string>
	<string name="email_not_valid">Email is not valid!</string>
	<string name="email_and_password_length_short">Email and password length must be at least 5</string>
	<string name="add_new_friend">Add new friend</string>
	<string name="no_friend">You have no friend,\n you can add new friends by menu</string>
	<string name="add">Add</string>
	<string name="request_sent">Your request has been sent</string>
	<string name="type_friend_username">Please type your friend username</string>
	<string name="new_friend_request_exist">New friend request</string>
	<string name="approve_selected_friends">Approve Selecteds and Discard Others</string>
	<string name="not_connected_to_network">There is no available connected network</string>
	<string name="message_cannot_be_sent">Message was not been able to sent</string>
	<string name="unknown_error_occured">Unknown error occured, please consult the developer</string>
	<string name="alert_dialog_server_address">Server address:</string>
	<string name="settings">Settings</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_cancel">Cancel</string>
	<string name="alert_dialog_settings">Settings</string>
	<string name="lastLocationDataSentAt">Last location data is sent at</string>
	<string name="realname">Name</string>
<string name="http_request_failed">Http request failed, please make sure that URL is valid in Settings and you are connected to the Internet...</string>
<string name="take_photo">Take photo</string>
<string name="http_missing_parameter">Missing parameter, please consult the developer</string>

 <string name="description_logo">Traceper</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Send Location</string>
    <string name="description_feature2">Auto Location</string>
    <string name="description_feature3">Take Photo</string>
    <string name="description_feature4">Setting</string>
    <string name="description_feature5">History</string>
    <string name="description_feature6">Exit</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="send_location">Send Location</string>
    <string name="auto_location">Auto Location</string>
    <string name="take_photo_b">Take Photo</string>
    <string name="setting_b">Setting</string>
    <string name="history_b">History</string>
    <string name="exit_b">Exit</string>

 

    <string name="about_intro">This app is ....</string>
    <string name="search_intro">Search page goes here...</string>


</resources>
