<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
</LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="6dip">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/send_location" android:id="@+id/send_location" android:drawableTop="@drawable/send_location_b"/>
        <Button style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/auto_location" android:id="@+id/auto_location" android:drawableTop="@drawable/auto_location_b"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/take_photo_b" android:id="@+id/take_photo" android:drawableTop="@drawable/take_photo_b"/>
        <Button style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/setting_b" android:id="@+id/setting_b" android:drawableTop="@drawable/setting_b"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/history_b" android:id="@+id/history_b" android:drawableTop="@drawable/history_b"/>
        <Button style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/exit_b" android:drawableTop="@drawable/exit_b" android:id="@+id/exit_b"/>
    </LinearLayout>

</LinearLayout>

</LinearLayout>
