<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"

    >
    <ImageView 
    	android:src="@drawable/logo"
    	android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    	
    		/>
    <LinearLayout
    	  android:orientation="vertical"
    	  android:layout_width="wrap_content"
    	  android:layout_height="wrap_content"
    	  android:gravity="center">
		<TextView  
  		  	android:layout_width="wrap_content" 
  		  	android:padding="10px"
    		android:layout_height="wrap_content" 
    		android:text="@string/lastLocationDataSentAt"
    		android:textSize="15px"    	
    	/>
    	<TextView  
			android:id="@+id/lastLocationDataSentAtTime"
			android:padding="10px"
  		  	android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:textSize="18px" 
    		android:text="calculating gps location..."   	
    	/>
    	<Button 
    		android:id="@+id/take_upload_photo_button" 
    		android:text="Take and upload photo"
    		android:textSize="15px"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		
    	/>
    </LinearLayout>
</LinearLayout>
</LinearLayout>